--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stringifunction",
   "version": "1.0.0",
-  "description": "Convert Javascript objects to and from JSON while preserving functions/methods.",
+  "description": "Convert Javascript Objects to and from JSON while preserving functions/methods.",
   "main": "stringifunction.js",
   "scripts": {
     "test": "test"
